changed package. json run build script

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "deploy": "gh-pages -d dist"
+    "deploy": "nuxt generate && gh-pages -d .output/public"
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.4",
