--- a/package.json
+++ b/package.json
@@ -11,11 +11,22 @@
     "deploy": "nuxt generate && gh-pages -d .output/public"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
+    "@pinia/nuxt": "^0.11.0",
     "@tailwindcss/postcss": "^4.1.4",
+    "@vueuse/core": "^13.3.0",
+    "axios": "^1.9.0",
+    "emoji-picker-element": "^1.26.3",
+    "emoji-picker-vue": "^1.0.1",
     "nuxt": "^3.16.2",
+    "pinia": "^3.0.2",
     "tailwindcss": "^3.4.17",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vue3-spinner": "^0.0.17"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.13.2",
