--- a/package.json
+++ b/package.json
@@ -24,13 +24,14 @@
     "nuxt": "^3.16.2",
     "pinia": "^3.0.2",
     "tailwindcss": "^3.4.17",
-    "vue": "^3.5.13",
+    "vue": "^3.5.15",
     "vue-router": "^4.5.0",
     "vue3-spinner": "^0.0.17"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.13.2",
     "@tailwindcss/postcss7-compat": "^2.2.17",
+    "@types/vue": "^1.0.31",
     "autoprefixer": "^10.4.21",
     "gh-pages": "^6.3.0",
     "postcss": "^8.5.3"
